--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -23,7 +23,7 @@
                     <div class="media-body">
                         <blockquote>{{trip.publishedDescription|safe}}</blockquote>
                         {% if traveller_edit %}
-                            <a href="/Trip/edit/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> Edit</a>
+                            <a href="/trip/edit/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> Edit</a>
                         {% endif %}
                     </div>
                 </div>
