--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -34,6 +34,9 @@
             </div>
         </div>
     {% endfor %}
+
+    <a class="pull-left" href="/trip/create/"> {% trans "Create Trip" %}</a>
+
     <div class="pagination">
         <span class="step-links">
             {% if trips.has_previous %}
