--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -50,19 +50,16 @@
                     	<li style="text-decoration: None">
                             <a id="sign_ind_nav" href="/buy_coins">Buy Coins</a>
                         </li>
-                    
-                        <li style="text-decoration: None">
-                            <a id="sign_ind_nav" href="/Trip/MyList">List my trips</a>
-                        </li>
+
                         {% if perms.principal.traveller %}
                             <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/Trip/MyList">List my trips</a>
+                                <a id="sign_ind_nav" href="/trip/mylist">List my trips</a>
                             </li>
                             <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/Trip/draft">List my trips draft</a>
+                                <a id="sign_ind_nav" href="/trip/draft">List my trips draft</a>
                             </li>
 {#                            <li style="text-decoration: None">#}
-{#                                <a id="sign_ind_nav" href="/Coin/list">List history coins</a>#}
+{#                                <a id="sign_ind_nav" href="/coin/list">List history coins</a>#}
 {#                            </li>#}
                             <li style="text-decoration: None; margin-right: 5px">
                                 <a id="sign_ind_nav" href="/profile/{{ user.traveller.id }}">
