--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -1,66 +1,114 @@
 {% extends 'base.html' %}
-{% block extrahead %}
-    {{ form.media }}
-
-    <script>
-        swal({
-            title: "Are you sure?",
-            text: "You will not be able to recover this Trip!",
-            type: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#DD6B55",
-            confirmButtonText: "Yes, delete it!",
-            closeOnConfirm: false
-        }, function () {
-            swal("Deleted!", "Your Trip file has been deleted.", "success");
-        });
-    </script>
-
-{% endblock %}
-{% load i18n %}
-
+{% block title %} Edit Profile {% endblock %}
 {% block content %}
-    <div class="row">
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
-            {% if create %}
-                <h2>{% trans "Create Trip" %}</h2>
-            {% else %}
-                <h2>{% trans "Edit Trip" %}</h2>
-            {% endif %}
+    {% load i18n %}
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 .col-sm-6 .col-md-8">
+                <div class="well panel panel-default">
+                    <h1 class="page-header">{% trans "Edit Trip" %}</h1>
 
-            {% if create %}
-                <form id="create" action="/Trip/create/" method="post">{% csrf_token %}
-            {% else %}
-                <form id="update" action="/Trip/edit/{{ trip.id }}" method="post" role="form">
-            {% endif %}
+                    <div class="panel-body">
+                        <div class="row">
+                            {% if create %}
+                                <form class="form-horizontal" role="form" action="/trip/create/" method="post"
+                                      data-toggle="validator">
+                            {% else %}
+                                <form class="form-horizontal" role="form" action="/trip/edit/{{ trip.id }}"
+                                      method="post"
+                                      data-toggle="validator">
+                            {% endif %}
+
+                            {% csrf_token %}
+                            <!-- edit form column -->
+                            <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
+                                <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
+                                    <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">
+                                        {% trans "City" %}</label>
+                                    <input class="form-control" id="id_city" name="city" type="text"
+                                           value="{% if form.initial|length != 0 %}{{ form.initial.city }}{% else %}{{ form.data.city }}{% endif %}"
+                                           required/>
+
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.0.errors }}
+                                    </div>
+                                </div>
+                                <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+                                    <label for="id_{{ form.visible_fields.1.html_name }}"
+                                           class="control-label">{% trans "Country" %}</label>
+                                    <input class="form-control" id="id_country" name="country" type="text"
+                                           value="
 
 
-            {% for field in form.visible_fields %}
 
-                <div id="div_{{ field.html_name }}"
-                     class="col-xs-6col-md-6 form-group{% if field.errors %} has-error{% endif %}">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    <div class="text-muted pull-right">
-                        <small>{{ field.help_text }}</small>
+                                                   {% if form.initial|length != 0 %}{{ form.initial.country }}{% else %}{{ form.data.country }}{% endif %}"
+                                           required/>
+
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.1.errors }}
+                                    </div>
+                                </div>
+                                <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %}">
+                                    <label for="id_{{ form.visible_fields.2.html_name }}"
+                                           class="control-label">{% trans "Start Date" %}</label>
+                                    {{ form.visible_fields.2 }}
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.2.errors }}
+                                    </div>
+                                </div>
+                                {% for hidden in form.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+
+                                <div class="form-group {% if form.visible_fields.3.errors %} has-error {% endif %}">
+                                    <label for="id_{{ form.visible_fields.3.html_name }}"
+                                           class="control-label">{% trans "End Date" %}</label>
+                                    {{ form.visible_fields.3 }}
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.3.errors }}
+                                    </div>
+                                </div>
+                                {% for hidden in form.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+
+                                <div class="form-group {% if form.visible_fields.4.errors %} has-error {% endif %}">
+                                    <label for="id_{{ form.visible_fields.4.html_name }}"
+                                           class="control-label">{{ form.visible_fields.4.html_name }}</label>
+                                    {{ form.visible_fields.4 }}
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.4.errors }}
+                                    </div>
+                                </div>
+                                {% for hidden in form.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+
+                                <div class="form-group">
+                                    <input class="btn btn-primary" name="save" value="Publish Trip"
+                                           type="submit">
+                                    <span></span>
+                                    <input class="btn btn-primary" name="save" value="Save draft"
+                                           type="submit">
+                                    <span></span>
+                                    {% if not create %}
+                                        <input class="btn btn-primary" name="delete" value="Delete Trip"
+                                               type="submit">
+                                    {% endif %}
+                                    <span></span>
+                                </div>
+                            </div>
+                            </form>
+                        </div>
+                        <!--/row-->
                     </div>
-                    <div class="help-block">
-                        {{ field.errors }}
-                    </div>
+                    <!--/panel-body-->
                 </div>
-            {% endfor %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="submit" name="save" value="Publish Trip" class="btn btn-primary"/>
-                <input type="submit" name="save" value="Save draft" class="btn btn-primary"/>
-                {% if not create and can_delete %}
-                    <input type="submit" name="delete" value="Delete Trip" class="btn btn-primary"/>
-                {% endif %}
+                <!--/panel-->
             </div>
-            </form>
+            <!--/col-->
         </div>
+        <!--/row-->
     </div>
+    <!--/container-->
 {% endblock %}
