--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <title>BrainTravel</title>
     <meta charset="ISO-8859-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load staticfiles %}
     {% load i18n %}
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
@@ -21,11 +22,9 @@
     <script src="{% static "js/validator.js" %}"></script>
     {% block extrahead %} {% endblock %}
 </head>
-{% autoescape on %}
-    <body>
+<body>
     <nav class="navbar navbar-default navbar-bt">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -35,58 +34,34 @@
                 </button>
                 <a class="navbar-brand" href="/">BrainTravel</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            
             <div class="collapse navbar-collapse" id="menu-navbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/search"><span class="fa fa-search"></span></a></li>
-                    <li style="text-decoration: None">
-                        <a id="sign_ind_nav" href="/auth_request">Login FS</a>
+                    <li>
+                        <a href="/search" class="animate"><span class="fa fa-search"></span></a>
                     </li>
+                   <!--  <li style="text-decoration: None">
+                        <a id="sign_ind_nav" href="/auth_request">Login FS</a>
+                    </li> -->
                     {% if user.is_anonymous %}
-                        <li style="background-color: #26A65B; color: #FFFFFF;">
-                            <a id="sign_ind_nav" href="/signin">Sign In</a>
-                        </li>
+                        {% include "menu/anonymous-menu.html" %}
+                    
                     {% else %}
-                    	<li style="text-decoration: None">
-                            <a id="sign_ind_nav" href="/buy_coins">Buy Coins</a>
-                        </li>
-
                         {% if perms.principal.traveller %}
-                            <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/trip/mylist">List my trips</a>
-                            </li>
-                            <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/trip/draft">List my trips draft</a>
-                            </li>
-{#                            <li style="text-decoration: None">#}
-{#                                <a id="sign_ind_nav" href="/coin/list">List history coins</a>#}
-{#                            </li>#}
-                            <li style="text-decoration: None; margin-right: 5px">
-                                <a id="sign_ind_nav" href="/profile/{{ user.traveller.id }}">
-                                    {% if user.traveller.photo == None %}
-                                        <img class="avatar img-circle img-thumbnail" src="/static/user_folder/default.jpg" width="45" alt="">
-                                    {% else %}
-                                        <img class="avatar img-circle img-thumbnail" src="/static/user_folder/{{ user.traveller.photo }}" width="45" alt="">
-                                    {% endif %}
-                                </a>
-                            </li>
-
+                            {% include "menu/traveller-menu.html" %}
                         {% else %}
-                            <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="/administrator/trip/list/">Trip list</a>
-                            </li>
+                            {% include "menu/admin-menu.html" %}
                         {% endif %}
 
-                        <li style="background-color: #26A65B;">
-                            <a id="sign_ind_nav" href="/logout">Logout</a>
-                        </li>
-
                     {% endif %}
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
+        <!-- /.container-fluid -->  
+        
+              
     </nav>
 
     <div class="container">{% block content %} {% endblock %}</div>
@@ -106,6 +81,6 @@
             </script>
         {% endfor %}
     {% endif %}
-    </body>
-{% endautoescape %}
+</body>
+
 </html>
