Planificador V1: Selección de Venues
Selección de Venues en función del número de dias y divido en dos
categorias: sitios para ver, y sitios para comer.

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -61,6 +61,11 @@
                             <li style="text-decoration: None">
                                 <a id="sign_ind_nav" href="/Trip/draft">List my trips draft</a>
                             </li>
+                            
+                            <li style="text-decoration: None">
+                                <a id="sign_ind_nav" href="planner/list_venues/">Planner</a>
+                            </li>
+                            
 {#                            <li style="text-decoration: None">#}
 {#                                <a id="sign_ind_nav" href="/Coin/list">List history coins</a>#}
 {#                            </li>#}
