form nuevo para planificar trip corregido la url de crear plan añadida una nueva vista de crear planes corregido los espacios que aparecian al editar un viaje adaptado el FS_servicio al form creado nuevo

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -49,7 +49,7 @@
                     {% else %}
                         {% if perms.principal.traveller %}
                             <li style="text-decoration: None">
-                                <a id="sign_ind_nav" href="planner/list_venues/">Planner</a>
+                                <a id="sign_ind_nav" href="/planner/list_venues/">Planner</a>
                             </li>
 {#                            <li style="text-decoration: None">#}
 {#                                <a id="sign_ind_nav" href="/Coin/list">List history coins</a>#}
