--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -1,64 +1,64 @@
 {% extends 'base.html' %}
 {% block title %} Edit Password {% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 .col-sm-6 .col-md-8">
-            <div class="well panel panel-default">
-                <h1 class="page-header">Edit Password</h1>
-                <div class="panel-body">
-                    <div class="row">
-                        <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator"  enctype="multipart/form-data">
+<div class="row">
+    <div class="col-xs-12 .col-sm-6 .col-md-8">
+        <div class="well panel panel-default">
+            <h1 class="page-header">Edit Password</h1>
+            <div class="panel-body">
+                <div class="row">
+                    <!-- left column -->
+                    <div class="col-md-4 col-sm-6 col-xs-8">
+                            <span class="fa fa-key fa-5x"></span>
+                    </div>
+                    <!-- edit form column -->
+                    <div class="col-md-7 col-sm-6 col-xs-8 personal-info">
+                        <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator">
                             {% csrf_token %}
-                            <!-- left column -->
-                            <div class="col-md-4 col-sm-6 col-xs-8">
-                                <div class="text-center">
-                                    <i class="fa fa-key fa-5x"></i>
+                            <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
+                                <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label"><strong>Old password:</strong></label>
+                                {{ form.visible_fields.0 }}
+                                <div class="help-block with-errors">
+                                    {{ form.visible_fields.0.errors }}
                                 </div>
                             </div>
-                            <!-- edit form column -->
-                            <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
-                                    <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">Old password:</label>
-                                        <input class="form-control" id="id_old_password" maxlength="30" name="old_password" type="password" required/>
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.0.errors }}
-                                        </div>
-                                    </div>
-                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label">New password:</label>
-                                        <input class="form-control" id="id_password" maxlength="30" name="password" type="password" required/>
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.1.errors }}
-                                        </div>
-                                    </div>
-                                    <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label">Repeat new password:</label>
-                                        <input class="form-control" type="password" id="id_password_repeat" maxlength="30" name="password_repeat"  data-match="#id_password" data-match-error="Whoops, these don't match" required/>
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.2.errors }}
-                                        </div>
-                                    </div>
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
-                                    <div class="form-group">
-                                        <input class="btn btn-primary" value="Save Changes" type="submit">
-                                        <span></span>
-                                        <a href="/profile/{% if form.initial|length != 0 %}{{ form.initial.id }}{% else %}{{ form.data.id }}{% endif %}" class="btn btn-default">CANCEL</a>
-                                    </div>
+                            <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+                                <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label"><strong>New password:</strong></label>
+                                {{ form.visible_fields.1 }}
+                                <div class="help-block with-errors">
+                                    {{ form.visible_fields.1.errors }}
+                                </div>
+                            </div>
+                            <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %} ">
+                                <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label"><strong>Repeat new password:</strong></label>
+                                {{ form.visible_fields.2 }}
+                                <div class="help-block with-errors">
+                                    {{ form.visible_fields.2.errors }}
+                                </div>
+                            </div>
+                            {% for hidden in form.hidden_fields %}
+                                {{ hidden }}
+                            {% endfor %}
+                            <div class="form-group">
+                                <input class="btn btn-primary" value="Save Changes" type="submit">
+                                <span></span>
+                                <a href="/profile/{{ user.id }}" class="btn btn-default">CANCEL</a>
+                            </div>
+                            <div class="alert alert-warning alert-dismissible form-group" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <i class="glyphicon glyphicon-warning-sign fa-1x"></i>
+                                <strong>The passwords</strong> must contain at least one uppercase, a lowercase letter and a number.
                             </div>
                         </form>
                     </div>
-                    <!--/row-->
                 </div>
-                <!--/panel-body-->
+                <!--/row-->
             </div>
-            <!--/panel-->
+            <!--/panel-body-->
         </div>
-        <!--/col-->
+        <!--/panel-->
     </div>
-    <!--/row-->
+    <!--/col-->
 </div>
-<!--/container-->
+<!--/row-->
 {%endblock%}
