--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <input class="btn btn-primary" value="Save Changes" type="submit">
                                 <span></span>
-                                <a href="/profile/{{ user.id }}" class="btn btn-default">CANCEL</a>
+                                <a href="/profile/{{ user.id }}" class="btn btn-default">Cancel</a>
                             </div>
                             <div class="alert alert-warning alert-dismissible form-group" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
