Corregido la url al crear un viaje planificado

--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -11,7 +11,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <form class="form-horizontal" role="form"
-                                  action="/planner/list_venues/planner/list_venues/planner/list_venues/" method="post"
+                                  action="/planner/list_venues/" method="post"
                                   data-toggle="validator">
                                 {% csrf_token %}
                                 <!-- edit form column -->
