--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -18,9 +18,12 @@
     <div class="col-lg-12">
         <div class="login-container">
             <div class="form-box-login">
-                <form action="/signin/" method="post">
+                <form id="siginForm" action="/signin/" method="post" role="form" data-toggle="validator">
                 	{% csrf_token %}
-                    <input type="text" placeholder="username" name="username" required>
+                	<div class="form-group">
+	                    <input type="email" class="form-control" data-error="Email not valid!" placeholder="email" name="username" required />
+	                    <div class="help-block with-errors"></div>
+                    </div>
                     <input type="password" placeholder="password" name="password">
                     <button class="btn btn-info btn-block login" type="submit">Login</button>
                     <hr/>
