Varias mejoras: - Plantilla de email para la confrmación de usuario: Ahora se envia la clave por correo. - Crear un plan: Se muestra la cantidad de monedas que va a costar la planificación y tus monedas actuales. - Llamada ajax para el registro de usuario elminada del archivo "main.js"

--- a/principal/templates/email/register_confirmation.html
+++ b/principal/templates/email/register_confirmation.html
@@ -6,5 +6,6 @@
 	<body>
 		<p>Hola {{username}}. Haz click en el siguiente enlace para validar tu cuenta</p>
 		<p><a href="http://localhost:8000/confirm_account?hash={{hash}}&username={{username}}&rand_password={{rand_password}}">Click aquí</a>
+		<p>Su clave es: <b>{{rand_password}}</b></p>
 	</body>
 </html>
