--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -41,7 +41,7 @@
                     <h4 class="modal-title" id="myModalLabel">Registration</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post">
+                    <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post" data-toggle="validator">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="name" class="col-sm-2 control-label">Name</label>
@@ -52,8 +52,9 @@
                         <div class="form-group">
                             <label for="email" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
-                              <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                              <input type="email" class="form-control" data-error="Email not valid!" id="email" name="email" placeholder="Email">
                             </div>
+                            <span class="help-block with-errors"></span>
                         </div>
                         <div class="col-sm-offset-2 col-sm-10">
                           <button type="submit" class="btn btn-default btn-lg btn-block" id="singUp-button">Sign up</button>
@@ -67,4 +68,88 @@
         </div>
     </div>
 </div>
+
+<script>
+	// This function gets cookie with a given name
+	function getCookie(name) {
+	    var cookieValue = null;
+	    if (document.cookie && document.cookie != '') {
+	        var cookies = document.cookie.split(';');
+	        for (var i = 0; i < cookies.length; i++) {
+	            var cookie = jQuery.trim(cookies[i]);
+	            // Does this cookie string begin with the name we want?
+	            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+	                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+	                break;
+	            }
+	        }
+	    }
+	    return cookieValue;
+	}
+	var csrftoken = getCookie('csrftoken');
+	 
+	/*
+	The functions below will create a header with csrftoken
+	*/
+	 
+	function csrfSafeMethod(method) {
+	    // these HTTP methods do not require CSRF protection
+	    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+	}
+	function sameOrigin(url) {
+	    // test that a given url is a same-origin URL
+	    // url could be relative or scheme relative or absolute
+	    var host = document.location.host; // host + port
+	    var protocol = document.location.protocol;
+	    var sr_origin = '//' + host;
+	    var origin = protocol + sr_origin;
+	    // Allow absolute or scheme relative URLs to same origin
+	    return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
+	        (url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
+	        // or any other URL that isn't scheme relative or absolute i.e relative.
+	        !(/^(\/\/|http:|https:).*/.test(url));
+	}
+	 
+	$.ajaxSetup({
+	    beforeSend: function(xhr, settings) {
+	        if (!csrfSafeMethod(settings.type) && sameOrigin(settings.url)) {
+	            // Send the token to same-origin, relative URLs only.
+	            // Send the token only if the method warrants CSRF protection
+	            // Using the CSRFToken value acquired earlier
+	            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+	        }
+	    }
+	});
+	
+	$('#traveller-registration').on('submit', function(event){
+	    event.preventDefault();
+		$('#singUp-button').hide()
+	    register_traveller();
+	});
+	
+	function register_traveller() {
+		$.ajax({
+	        url : "/register_traveller/", // the endpoint
+	        type : "POST", // http method
+	        data : $('#traveller-registration').serialize(),
+			dataType : "json",
+	        // handle a successful response
+	        success : function(json) {
+				$('#singUp-button').show()
+	            if(json.success == true){
+	                sweetAlert("Well done!",json.success, "success"); // log the returned json to the console    
+	            }else{
+	                sweetAlert(json.error, "","error");
+				}
+				$('#traveller-registration')[0].reset();
+			},
+	
+	        // handle a non-successful response
+	        error : function(xhr,errmsg,err) {
+				$('#singUp-button').show()
+	        }
+	    });
+	};
+</script>
+
 {%endblock%}
