--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -4,94 +4,114 @@
     {% load i18n %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 .col-sm-6 .col-md-8">
-                <div class="well panel panel-default">
-                    <h1 class="page-header">{% trans "Plan creation" %}</h1>
+			<div class="well panel panel-default col-xs-12">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+						<h1 class="page-header">{% trans "Plan creation" %}</h1>
+						<div class="panel-body">
+							<div class="row">
+								<form class="form-horizontal" role="form"
+									  action="/planner/list_venues/" method="post"
+									  data-toggle="validator">
+									{% csrf_token %}
+									<!-- edit form column -->
+									<div class="col-md-5 col-sm-6 col-xs-8 personal-info">
+										<div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
+											<label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">
+												{% trans "City" %}</label>
+											<input class="form-control" id="id_city" name="city" type="text"
+												   value="{% if form.initial|length != 0 %}{{ form.initial.city }}{% else %}{{ form.data.city }}{% endif %}"
+												   required/>
 
-                    <div class="panel-body">
-                        <div class="row">
-                            <form class="form-horizontal" role="form"
-                                  action="/planner/list_venues/" method="post"
-                                  data-toggle="validator">
-                                {% csrf_token %}
-                                <!-- edit form column -->
-                                <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
-                                    <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">
-                                            {% trans "City" %}</label>
-                                        <input class="form-control" id="id_city" name="city" type="text"
-                                               value="{% if form.initial|length != 0 %}{{ form.initial.city }}{% else %}{{ form.data.city }}{% endif %}"
-                                               required/>
+											<div class="help-block with-errors">
+												{{ form.visible_fields.0.errors }}
+											</div>
+										</div>
+										<div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+											<label for="id_{{ form.visible_fields.1.html_name }}"
+												   class="control-label">{% trans "Country" %}</label>
+											<input class="form-control" id="id_country" name="country" type="text"
+												   value="{% if form.initial|length != 0 %}{{ form.initial.country }}{% else %}{{ form.data.country }}{% endif %}"
+												   required/>
 
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.0.errors }}
-                                        </div>
-                                    </div>
-                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.1.html_name }}"
-                                               class="control-label">{% trans "Country" %}</label>
-                                        <input class="form-control" id="id_country" name="country" type="text"
-                                               value="{% if form.initial|length != 0 %}{{ form.initial.country }}{% else %}{{ form.data.country }}{% endif %}"
-                                               required/>
+											<div class="help-block with-errors">
+												{{ form.visible_fields.1.errors }}
+											</div>
+										</div>
+										<div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %}">
+											<label for="id_{{ form.visible_fields.2.html_name }}"
+												   class="control-label">{% trans "Start Date" %}</label>
+											{{ form.visible_fields.2 }}
+											<div class="help-block with-errors">
+												{{ form.visible_fields.2.errors }}
+											</div>
+										</div>
+										{% for hidden in form.hidden_fields %}
+											{{ hidden }}
+										{% endfor %}
 
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.1.errors }}
-                                        </div>
-                                    </div>
-                                    <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %}">
-                                        <label for="id_{{ form.visible_fields.2.html_name }}"
-                                               class="control-label">{% trans "Start Date" %}</label>
-                                        {{ form.visible_fields.2 }}
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.2.errors }}
-                                        </div>
-                                    </div>
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
+										<div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+											<label for="id_{{ form.visible_fields.1.html_name }}"
+												   class="control-label">{% trans "Days" %}</label>
+											<input class="form-control" id="id_days" name="days" type="number" min="1" max="7"
+												   value="{% if form.initial|length != 0 %}{{ form.initial.country }}{% else %}{{ form.data.country }}{% endif %}"
+												   required onchange="calculatePlanPrice(this.value);"/>
+											<div class="help-block with-errors">
+												{{ form.visible_fields.1.errors }}
+											</div>
+										</div>
+										{% for hidden in form.hidden_fields %}
+											{{ hidden }}
+										{% endfor %}
+										<div class="form-group {% if form.visible_fields.4.errors %} has-error {% endif %}">
+											<label for="id_{{ form.visible_fields.4.html_name }}"
+												   class="control-label">{{ form.visible_fields.4.html_name }}</label>
+											{{ form.visible_fields.4 }}
+											<div class="help-block with-errors">
+												{{ form.visible_fields.4.errors }}
+											</div>
+										</div>
+										{% for hidden in form.hidden_fields %}
+											{{ hidden }}
+										{% endfor %}
 
-                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.1.html_name }}"
-                                               class="control-label">{% trans "Days" %}</label>
-                                        <input class="form-control" id="id_days" name="days" type="number" min="1" max="7"
-                                               value="{% if form.initial|length != 0 %}{{ form.initial.country }}{% else %}{{ form.data.country }}{% endif %}"
-                                               required/>
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.1.errors }}
-                                        </div>
-                                    </div>
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
-                                    <div class="form-group {% if form.visible_fields.4.errors %} has-error {% endif %}">
-                                        <label for="id_{{ form.visible_fields.4.html_name }}"
-                                               class="control-label">{{ form.visible_fields.4.html_name }}</label>
-                                        {{ form.visible_fields.4 }}
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.4.errors }}
-                                        </div>
-                                    </div>
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
-
-                                    <div class="form-group">
-                                        <input class="btn btn-primary" name="save" value="Create Plan"
-                                               type="submit">
-                                        <span></span>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <!--/row-->
-                    </div>
-                    <!--/panel-body-->
-                </div>
-                <!--/panel-->
-            </div>
-            <!--/col-->
+										<div class="form-group">
+											<input class="btn btn-primary" name="save" value="Create Plan"
+												   type="submit">
+											<span></span>
+										</div>
+									</div>
+								</form>
+							</div>
+							<!--/row-->
+						</div>
+						<!--/panel-body-->
+					<!--/panel-->
+				</div>
+				<!--/col-->
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<h2>Price: <span id="tripPrice">?</span> Coins</h2>
+					<h2>My Coins: <span id="myCoins">{{traveller.coins}}</span> Coins</h2>
+				</div>
+			</div>
         </div>
         <!--/row-->
     </div>
+	
+	<script>
+		function calculatePlanPrice(days){
+			coins = 0;
+			if(days <= 3){
+				coins = 20
+			}else if(days > 3 && days <= 7){
+				coins = 40
+			}else{
+				coins = 80
+			}
+			
+			$('#tripPrice').empty();
+			$('#tripPrice').append(coins);
+		}
+	</script>
+	
     <!--/container-->
 {% endblock %}
