--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block extrahead %} {{form.media}} {% endblock %}
 {% block title %} Plan creation {% endblock %}
 {% block content %}
     {% load i18n %}
