Vista de detalles de viaje planificado OK.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -484,3 +484,11 @@ img {
 {
     font-size: 87px;
 }
+.img-venue{
+	height: 200px !important;
+	width: auto;
+}
+.img-venue-carousel{
+	width: 100%;
+	height: auto;
+}
