--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -1,75 +1,90 @@
-{% extends 'base.html' %}
-{% block title %} My trips {% endblock %}
-{% block content %}
-    {% load i18n %}
-    
-    <!-- <div class="row clearfix">
-        <div class="col-md-12">
-            <div class="carousel slide" id="carousel-374942">
-                <ol class="carousel-indicators">
-                    <li data-slide-to="0" data-target="#carousel-374942">
-                    </li>
-                    <li data-slide-to="1" data-target="#carousel-374942" class="active">
-                    </li>
-                    <li data-slide-to="2" data-target="#carousel-374942">
-                    </li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item">
-                        <img alt="" src="http://lorempixel.com/1600/500/sports/1" />
-                        <div class="carousel-caption">
-                            <h4>
-                                First Thumbnail label
-                            </h4>
-                            <p>
-                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="item active">
-                        <img alt="" src="http://lorempixel.com/1600/500/sports/2" />
-                        <div class="carousel-caption">
-                            <h4>
-                                Second Thumbnail label
-                            </h4>
-                            <p>
-                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img alt="" src="http://lorempixel.com/1600/500/sports/3" />
-                        <div class="carousel-caption">
-                            <h4>
-                                Third Thumbnail label
-                            </h4>
-                            <p>
-                                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                            </p>
-                        </div>
-                    </div>
-                </div> <a class="left carousel-control" href="#carousel-374942" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-374942" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-    </div> -->
-    
-	    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-	       {% for day in trip.day_set.all %}
-	           <div class="panel panel-default">
-	               <div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
-	                   <h3 class="panel-title">
-	                       <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{day.numberDay}}" aria-expanded="true" aria-controls="collapse{{day.numberDay}}">Day {{day.numberDay}}</a>
-	                   </h3>
+{% extends 'base.html' %} {% block title %} My trips {% endblock %} 
+{% block content %} {% load i18n %} {% load staticfiles %}
+
+<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+	        {% for day in trip.day_set.all %}
+	            {% for venue in day.venues.all %}
+	                <div class="item {% if forloop.first %}active{% endif %}">
+		                <img alt="{{venue.name}}" src="{{venue.photo}}" class="img-venue-carousel"/>
+		                <div class="carousel-caption">
+		                   <h4>{{venue.name}}</h4>
+		                </div>
 	                </div>
-				    <div id="collapse{{day.numberDay}}" class="panel-collapse collapse {% if forloop.first %}in{% endif %}" role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
-				        <div class="panel-body">
-				            <h4><i class="fa fa-map-marker"></i> Those are the venues that we suggest to visit on day {{day.numberDay}}</h4>
-				            <hr>
-				            <h4><i class="fa fa-cutlery"></i> Those are the places where we suggest you to eat on day {{day.numberDay}}</h4>
-			            </div>
-				    </div>
-			  </div>
-			{% endfor %}
+                {% endfor %}
+            {% endfor %}
+	    </div>
+	
+	  Controls
+	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
+     -->
+<h1>Trip details</h1>
+<h2>{{trip.day_set.count}} days in {{trip.city}}, {{trip.country}}</h2>
+<p>Click on the day indicator to show te corresponding plan</p>
+
+<div class="panel-group" id="accordion" role="tablist"
+	aria-multiselectable="true">
+	{% for day in trip.day_set.all %}
+	<div
+		class="panel panel-{% cycle 'primary' 'success' 'info' 'warning' 'danger' %}">
+		<div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion"
+					href="#collapse{{day.numberDay}}" aria-expanded="true"
+					aria-controls="collapse{{day.numberDay}}">Day {{day.numberDay}}</a>
+			</h4>
 		</div>
-	      
+		<div id="collapse{{day.numberDay}}"
+			class="panel-collapse collapse {% if forloop.first %}in{% endif %}"
+			role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
+			<div class="panel-body">
+				<h3>
+					<i class="fa fa-map-marker"></i> Those are the venues that we
+					suggest to visit on day {{day.numberDay}}
+				</h3>
+				<div class="row text-center">
+					{% for venue in day.venues.all %} {% if not venue.is_food%}
+					<div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
+						<img src="{{venue.photo}}"
+							class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+						<h4>{{venue.name}}</h4>
+					</div>
+					{% if forloop.counter|divisibleby:2 %}
+					<div class="clearfix visible-xs-block"></div>
+					{% elif forloop.counter|divisibleby:3 %}
+					<div class="clearfix visible-sm-block"></div>
+					{% endif %} {% endif %} {% endfor %}
+				</div>
+
+				<h3>
+					<i class="fa fa-cutlery"></i> Those are the places where we suggest
+					you to eat on day {{day.numberDay}}
+				</h3>
+				<div class="row text-center">
+					{% for venue in day.venues.all %} {% if venue.is_food%}
+					<div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
+						<img src="{{venue.photo}}"
+							class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+						<h4>{{venue.name}}</h4>
+					</div>
+					{% if forloop.counter|divisibleby:2 %}
+					<div class="clearfix visible-xs-block"></div>
+					{% elif forloop.counter|divisibleby:3 %}
+					<div class="clearfix visible-sm-block"></div>
+					{% endif %} {% endif %} {% endfor %}
+				</div>
+			</div>
+		</div>
+	</div>
+	{% endfor %}
+</div>
+
 {% endblock %}
