Bugfixing: Varios errores en los detalles de viajes. Navegabilidad hasta la planificación del viaje implementada.

--- a/principal/templates/menu/traveller-menu.html
+++ b/principal/templates/menu/traveller-menu.html
@@ -10,6 +10,10 @@
 </li>
 
 <li style="text-decoration: None">
+    <a id="sign_ind_nav" href="/trip/planned_trips">List my planned trips</a>
+</li>
+
+<li style="text-decoration: None">
     <a id="sign_ind_nav" href="/trip/draft">List my trips draft</a>
 </li>
 
